[project]
name = "ai-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.74.1",
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
